# src/main/java/kr/hhplus/be/server/domain/reservation/domain/repository/ReservationRepository.java
@@ -1,0 +1,9 @@
+package kr.hhplus.be.server.domain.reservation.domain.repository;
+
+import kr.hhplus.be.server.domain.reservation.domain.model.Reservation;
+import java.util.Optional;
+
+public interface ReservationRepository {
+    Optional<Reservation> findByScheduleAndSeat(Long scheduleId, Long seatId);
+    Reservation save(Reservation reservation);
+}
